--- a/src/eduid_webapp/translations/en/LC_MESSAGES/messages.po
+++ b/src/eduid_webapp/translations/en/LC_MESSAGES/messages.po
@@ -1,46 +1,53 @@
-# English translations for PROJECT.
-# Copyright (C) 2018 ORGANIZATION
+# Translations template for PROJECT.
+# Copyright (C) 2019 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2018.
-#
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2019.
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-03-27 16:46+0200\n"
-"PO-Revision-Date: 2018-03-27 10:54+0200\n"
+"POT-Creation-Date: 2019-07-01 16:50+0200\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: en\n"
-"Language-Team: en <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.5.1\n"
+"Generated-By: Babel 2.7.0\n"
 
-#: email/verifications.py:72
+#: email/verifications.py:70
 msgid "eduID confirmation email"
-msgstr ""
+msgstr "eduID confirmation email"
 
 #: email/templates/verification_email.html.jinja2:5
 #, python-format
 msgid ""
 "\n"
-"<p>Thank you for registering with <a "
-"href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
+"<p>Thank you for registering with <a href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
 "\n"
-"<p>To confirm that you own this email address, simply click on the "
-"following link:\n"
+"<p>To confirm that you own this email address, simply click on the following link:\n"
 "\n"
 "<a href=\"%(verification_link)s\">%(verification_link)s</a></p>\n"
 "\n"
-"<p>If clicking on the link above does not work, go to your profile and "
-"emails section. Click on the\n"
+"<p>If clicking on the link above does not work, go to your profile and emails section. Click on the\n"
 "confirmation icon and enter the following code:</p>\n"
 "\n"
 "<p><strong>%(code)s</strong></p>\n"
 "\n"
 msgstr ""
+"\n"
+"<p>Thank you for registering with <a href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
+"\n"
+"<p>To confirm that you own this email address, simply click on the following link:\n"
+"\n"
+"<a href=\"%(verification_link)s\">%(verification_link)s</a></p>\n"
+"\n"
+"<p>If clicking on the link above does not work, go to your profile and emails section. Click on the\n"
+"confirmation icon and enter the following code:</p>\n"
+"\n"
+"<p><strong>%(code)s</strong></p>\n"
+"\n"
 
 #: email/templates/verification_email.txt.jinja2:1
 #, python-format
@@ -48,34 +55,46 @@ msgid ""
 "\n"
 "Thank you for registering with %(site_name)s.\n"
 "\n"
-"To confirm that you own this email address, simply click on the following"
-" link:\n"
+"To confirm that you own this email address, simply click on the following link:\n"
 "\n"
 "%(verification_link)s\n"
 "\n"
-"If clicking on the link above does not work, go to your profile and "
-"emails section. Click on the\n"
+"If clicking on the link above does not work, go to your profile and emails section. Click on the\n"
 "verification icon and enter the following code:\n"
 "\n"
 "%(code)s\n"
 "\n"
 msgstr ""
+"\n"
+"Thank you for registering with %(site_name)s.\n"
+"\n"
+"To confirm that you own this email address, simply click on the following link:\n"
+"\n"
+"%(verification_link)s\n"
+"\n"
+"If clicking on the link above does not work, go to your profile and emails section. Click on the\n"
+"verification icon and enter the following code:\n"
+"\n"
+"%(code)s\n"
+"\n"
 
-#: oidc_proofing/helpers.py:76
+#: oidc_proofing/helpers.py:128
 #, python-format
 msgid "%(site_name)s account verification"
-msgstr ""
+msgstr "%(site_name)s account verification"
 
 #: oidc_proofing/templates/redo_verification.html.jinja2:5
 #, python-format
 msgid ""
 "\n"
-"    <p>You have tried to verify your account at <a "
-"href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
-"    <p>We encountered a problem and kindly ask you to verify you account "
-"again using a different verification method.</p>\n"
+"    <p>You have tried to verify your account at <a href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
+"    <p>We encountered a problem and kindly ask you to verify you account again using a different verification method.</p>\n"
 "    <p>We apologize for any inconvenience.</p>\n"
 msgstr ""
+"\n"
+"    <p>You have tried to verify your account at <a href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
+"    <p>We encountered a problem and kindly ask you to verify you account again using a different verification method.</p>\n"
+"    <p>We apologize for any inconvenience.</p>\n"
 
 #: oidc_proofing/templates/redo_verification.txt.jinja2:2
 #, python-format
@@ -83,33 +102,436 @@ msgid ""
 "\n"
 "    You have tried to verify your account at %(site_name)s\n"
 "\n"
-"    We encountered a problem and kindly ask you to verify you account "
-"again using a different verification method.\n"
+"    We encountered a problem and kindly ask you to verify you account again using a different verification method.\n"
 "\n"
 "    We apologize for any inconvenience.\n"
 msgstr ""
+"\n"
+"    You have tried to verify your account at %(site_name)s\n"
+"\n"
+"    We encountered a problem and kindly ask you to verify you account again using a different verification method.\n"
+"\n"
+"    We apologize for any inconvenience.\n"
 
-#: security/views/security.py:269
-msgid "eduID account termination"
+#: security/helpers.py:151
+msgid "Terminate account"
+msgstr "Terminate account"
+
+#: security/helpers.py:187 security/views/reset_password.py:79
+#: security/views/templates/reset_password.jinja2:28
+msgid "Reset password"
+msgstr "Reset password"
+
+#: security/schemas.py:213
+msgid "Invalid email address"
+msgstr "Invalid email address"
+
+#: security/schemas.py:226
+msgid "Please enter a code"
+msgstr "Please enter a code"
+
+#: security/schemas.py:242
+msgid "Please enter a password"
+msgstr "Please enter a password"
+
+#: security/schemas.py:244
+msgid "Please repeat the password"
+msgstr "Please repeat the password"
+
+#: security/schemas.py:246
+msgid "Passwords does not match"
+msgstr "Passwords does not match"
+
+#: security/schemas.py:254
+msgid "Please use a stronger password"
+msgstr "Please use a stronger password"
+
+#: security/views/reset_password.py:38
+msgid "404 Not found"
+msgstr "404 Not found"
+
+#: security/views/reset_password.py:39
+msgid "The requested state can not be found."
+msgstr "The requested state can not be found."
+
+#: security/views/reset_password.py:41 security/views/reset_password.py:51
+#: security/views/reset_password.py:112 security/views/reset_password.py:167
+msgid "Reset your password"
+msgstr "Reset your password"
+
+#: security/views/reset_password.py:48
+msgid "Link expired"
+msgstr "Link expired"
+
+#: security/views/reset_password.py:49
+msgid "The password reset link has expired."
+msgstr "The password reset link has expired."
+
+#: security/views/reset_password.py:63
+msgid "SMS code expired"
+msgstr "SMS code expired"
+
+#: security/views/reset_password.py:64
+msgid "The phone verification has expired."
+msgstr "The phone verification has expired."
+
+#: security/views/reset_password.py:66 security/views/reset_password.py:186
+msgid "Resend code or try another way"
+msgstr "Resend code or try another way"
+
+#: security/views/reset_password.py:80
+msgid "Enter an email address registered to your account below"
+msgstr "Enter an email address registered to your account below"
+
+#: security/views/reset_password.py:84
+msgid "Reset password message sent. Check your email to continue."
+msgstr "Reset password message sent. Check your email to continue."
+
+#: security/views/reset_password.py:109 security/views/reset_password.py:198
+msgid "Temporary technical problem"
+msgstr "Temporary technical problem"
+
+#: security/views/reset_password.py:110 security/views/reset_password.py:199
+msgid "Please try again."
+msgstr "Please try again."
+
+#: security/views/reset_password.py:122
+msgid "Extra security"
+msgstr "Extra security"
+
+#: security/views/reset_password.py:123
+msgid "Choose an option to enhance the security"
+msgstr "Choose an option to enhance the security"
+
+#: security/views/reset_password.py:134
+msgid "Email address not validated"
+msgstr "Email address not validated"
+
+#: security/views/reset_password.py:135
+msgid "Please use the password reset link that you have in your email."
+msgstr "Please use the password reset link that you have in your email."
+
+#: security/views/reset_password.py:164
+msgid "Something went wrong"
+msgstr "Something went wrong"
+
+#: security/views/reset_password.py:165
+msgid "Please restart the password reset procedure."
+msgstr "Please restart the password reset procedure."
+
+#: security/views/reset_password.py:181
+#: security/views/templates/reset_password_verify_phone.jinja2:30
+msgid "Verify phone number"
+msgstr "Verify phone number"
+
+#: security/views/reset_password.py:182
+msgid "Enter the code you received via SMS"
+msgstr "Enter the code you received via SMS"
+
+#: security/views/reset_password.py:201
+msgid "Try again"
+msgstr "Try again"
+
+#: security/views/reset_password.py:206
+msgid "Invalid code. Please try again."
+msgstr "Invalid code. Please try again."
+
+#: security/views/reset_password.py:217
+msgid "New password"
+msgstr "New password"
+
+#: security/views/reset_password.py:218
+msgid ""
+"\n"
+"            Please choose a new password for your eduID account. A strong password has been generated for you.\n"
+"            You can accept the generated password by clicking \"Change password\" or you can opt to choose your\n"
+"            own password by clicking \"Custom Password\".\n"
+"        "
 msgstr ""
+"\n"
+"            Please choose a new password for your eduID account. A strong password has been generated for you.\n"
+"            You can accept the generated password by clicking \"Change password\" or you can opt to choose your\n"
+"            own password by clicking \"Custom Password\".\n"
+"        "
+
+#: security/views/templates/base.jinja2:2
+msgid "en"
+msgstr "en"
+
+#: security/views/templates/error.jinja2:3
+msgid "Error"
+msgstr "Error"
+
+#: security/views/templates/reset_password.jinja2:3
+msgid "Reset password - Email"
+msgstr "Reset password - Email"
+
+#: security/views/templates/reset_password.jinja2:18
+msgid "Email address"
+msgstr "Email address"
+
+#: security/views/templates/reset_password_email.html.jinja2:1
+#, python-format
+msgid ""
+"\n"
+"<p>Hi,</p>\n"
+"<p>You recently asked to reset your password for your %(site_name)s account.</p>\n"
+"<p>To change your password, click the link below:</p>\n"
+"<p><a href=\"%(reset_password_link)s\">%(reset_password_link)s</a></p>\n"
+"<p>If clicking the link does not work you can copy and paste it into your browser.</p>\n"
+"<p>The password reset link is valid for %(password_reset_timeout)s hours.</p>\n"
+"<p>(This is an automated email. Please do not reply.)</p>\n"
+msgstr ""
+"\n"
+"<p>Hi,</p>\n"
+"<p>You recently asked to reset your password for your %(site_name)s account.</p>\n"
+"<p>To change your password, click the link below:</p>\n"
+"<p><a href=\"%(reset_password_link)s\">%(reset_password_link)s</a></p>\n"
+"<p>If clicking the link does not work you can copy and paste it into your browser.</p>\n"
+"<p>The password reset link is valid for %(password_reset_timeout)s hours.</p>\n"
+"<p>(This is an automated email. Please do not reply.)</p>\n"
+
+#: security/views/templates/reset_password_email.txt.jinja2:1
+#, python-format
+msgid ""
+"\n"
+"Hi,\n"
+"\n"
+"You recently asked to reset your password for your %(site_name)s account.\n"
+"\n"
+"To change your password, click the link below:\n"
+"\n"
+"%(reset_password_link)s\n"
+"\n"
+"If clicking the link does not work you can copy and paste it into your browser.\n"
+"\n"
+"The password reset link is valid for %(password_reset_timeout)s hours.\n"
+"\n"
+"(This is an automated email. Please do not reply.)\n"
+msgstr ""
+"\n"
+"Hi,\n"
+"\n"
+"You recently asked to reset your password for your %(site_name)s account.\n"
+"\n"
+"To change your password, click the link below:\n"
+"\n"
+"%(reset_password_link)s\n"
+"\n"
+"If clicking the link does not work you can copy and paste it into your browser.\n"
+"\n"
+"The password reset link is valid for %(password_reset_timeout)s hours.\n"
+"\n"
+"(This is an automated email. Please do not reply.)\n"
+
+#: security/views/templates/reset_password_extra_security.jinja2:3
+msgid "Reset password - Extra security"
+msgstr "Reset password - Extra security"
+
+#: security/views/templates/reset_password_extra_security.jinja2:26
+msgid "Send SMS to number"
+msgstr "Send SMS to number"
+
+#: security/views/templates/reset_password_extra_security.jinja2:40
+msgid ""
+"Continue with no extra security. I understand that I will have to verify my "
+"account again."
+msgstr ""
+"Continue with no extra security. I understand that I will have to verify my "
+"account again."
+
+#: security/views/templates/reset_password_new_password.jinja2:28
+msgid "Your generated password is"
+msgstr "Your generated password is"
+
+#: security/views/templates/reset_password_new_password.jinja2:32
+msgid ""
+"Copy and save the above password somewhere safe and click \"Accept "
+"password\"."
+msgstr ""
+"Copy and save the above password somewhere safe and click \"Accept "
+"password\"."
+
+#: security/views/templates/reset_password_new_password.jinja2:37
+msgid ""
+"Accept\n"
+"                                        password"
+msgstr ""
+"Accept\n"
+"                                        password"
+
+#: security/views/templates/reset_password_new_password.jinja2:46
+msgid ""
+"\n"
+"                            <p><strong>Choose a strong password</strong></p>\n"
+"                            <p>Some tips:</p>\n"
+"                            <ul>\n"
+"                                <li>Use upper- and lowercase characters (preferably not in the beginning or end)</li>\n"
+"                                <li>Add digits somewhere else than at the end of the password</li>\n"
+"                                <li>Add special characters, such as &#64; &#36; &#92; &#43; &#95; &#37;</li>\n"
+"                                <li>Spaces are ignored</li>\n"
+"                            </ul>\n"
+"                        "
+msgstr ""
+"\n"
+"                            <p><strong>Choose a strong password</strong></p>\n"
+"                            <p>Some tips:</p>\n"
+"                            <ul>\n"
+"                                <li>Use upper- and lowercase characters (preferably not in the beginning or end)</li>\n"
+"                                <li>Add digits somewhere else than at the end of the password</li>\n"
+"                                <li>Add special characters, such as &#64; &#36; &#92; &#43; &#95; &#37;</li>\n"
+"                                <li>Spaces are ignored</li>\n"
+"                            </ul>\n"
+"                        "
+
+#: security/views/templates/reset_password_new_password.jinja2:60
+#: security/views/templates/reset_password_new_password.jinja2:61
+msgid "Password"
+msgstr "Password"
+
+#: security/views/templates/reset_password_new_password.jinja2:66
+#: security/views/templates/reset_password_new_password.jinja2:67
+msgid "Repeat password"
+msgstr "Repeat password"
+
+#: security/views/templates/reset_password_new_password.jinja2:80
+msgid ""
+"Change\n"
+"                                        password"
+msgstr ""
+"Change\n"
+"                                        password"
+
+#: security/views/templates/reset_password_new_password.jinja2:91
+#, python-format
+msgid ""
+"\n"
+"                <p>Password has been updated successfully.</p>\n"
+"                <p><a href=\"%(login_url)s\">Return to login page</a></p>\n"
+"            "
+msgstr ""
+"\n"
+"                <p>Password has been updated successfully.</p>\n"
+"                <p><a href=\"%(login_url)s\">Return to login page</a></p>\n"
+"            "
+
+#: security/views/templates/reset_password_new_password.jinja2:103
+msgid "A stronger password is required."
+msgstr "A stronger password is required."
+
+#: security/views/templates/reset_password_new_password.jinja2:104
+msgid "Type the same password again"
+msgstr "Type the same password again"
+
+#: security/views/templates/reset_password_sms.txt.jinja2:1
+#, python-format
+msgid ""
+"\n"
+"Your %(site_name)s verification code: %(verification_code)s\n"
+msgstr ""
+"\n"
+"Your %(site_name)s verification code: %(verification_code)s\n"
+
+#: security/views/templates/reset_password_verify_phone.jinja2:3
+msgid "Reset password - Verify phone number"
+msgstr "Reset password - Verify phone number"
+
+#: security/views/templates/reset_password_verify_phone.jinja2:17
+msgid "SMS code"
+msgstr "SMS code"
 
 #: security/views/templates/termination_email.html.jinja2:5
 #, python-format
 msgid ""
 "\n"
-"<p>You have chosen to terminate your account at <a "
-"href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
+"    <p>You have chosen to terminate your account at <a href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
 "\n"
+"    <p><strong>If you did not initiate this action please reset your password immediately.</strong></p>\n"
+"\n"
+"    <p>Thank you for using %(site_name)s.</p>\n"
+"\n"
+"    <p>(This is an automated email. Please do not reply.)</p>\n"
 msgstr ""
+"\n"
+"    <p>You have chosen to terminate your account at <a href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
+"\n"
+"    <p><strong>If you did not initiate this action please reset your password immediately.</strong></p>\n"
+"\n"
+"    <p>Thank you for using %(site_name)s.</p>\n"
+"\n"
+"    <p>(This is an automated email. Please do not reply.)</p>\n"
 
 #: security/views/templates/termination_email.txt.jinja2:2
 #, python-format
 msgid ""
 "\n"
-"You have chosen to terminate your account at %(site_name)s.\n"
+"    You have chosen to terminate your account at %(site_name)s.\n"
+"\n"
+"    If you did not initiate this action please reset your password immediately.\n"
+"\n"
+"    Thank you for using %(site_name)s.\n"
+"\n"
+"    (This is an automated email. Please do not reply.)\n"
+msgstr ""
+"\n"
+"    You have chosen to terminate your account at %(site_name)s.\n"
+"\n"
+"    If you did not initiate this action please reset your password immediately.\n"
+"\n"
+"    Thank you for using %(site_name)s.\n"
+"\n"
+"    (This is an automated email. Please do not reply.)\n"
+
+#: signup/verifications.py:132
+msgid "eduid-signup verification email"
+msgstr "eduid-signup verification email"
+
+#: signup/templates/verification_email.html.jinja2:1
+#, python-format
+msgid ""
+"\n"
+"\n"
+"<h2>Welcome to %(site_name)s,</h2>\n"
+"\n"
+"<p>You recently signed up for <a href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
+"\n"
+"<p>Please confirm the e-mail address and get your password by clicking on this link:</p>\n"
+"\n"
+"<a href=\"%(verification_link)s\">%(verification_link)s</a>\n"
 "\n"
 msgstr ""
+"\n"
+"\n"
+"<h2>Welcome to %(site_name)s,</h2>\n"
+"\n"
+"<p>You recently signed up for <a href=\"%(site_url)s\">%(site_name)s</a>.</p>\n"
+"\n"
+"<p>Please confirm the e-mail address and get your password by clicking on this link:</p>\n"
+"\n"
+"<a href=\"%(verification_link)s\">%(verification_link)s</a>\n"
+"\n"
 
-#~ msgid "eduID account verification"
-#~ msgstr ""
-
+#: signup/templates/verification_email.txt.jinja2:1
+#, python-format
+msgid ""
+"\n"
+"\n"
+"Welcome to %(site_name)s,\n"
+"\n"
+"You recently signed up for %(site_name)s.\n"
+"\n"
+"Please confirm the e-mail address and get your password by clicking on this link:\n"
+"\n"
+"  %(verification_link)s\n"
+"\n"
+msgstr ""
+"\n"
+"\n"
+"Welcome to %(site_name)s,\n"
+"\n"
+"You recently signed up for %(site_name)s.\n"
+"\n"
+"Please confirm the e-mail address and get your password by clicking on this link:\n"
+"\n"
+"  %(verification_link)s\n"
+"\n"
